client/homestyle.css
body {
    font-family: 'Zen Kaku Gothic Antique', sans-serif;
}

.title-bar {
    background-color: lightblue;
    color: aliceblue;
}

#left-side-bar {
    background: url('./shelf.jpg') repeat-y;
    
    padding: 5px;
    padding-top: 10px;

}

.ingredient-list{
    background-color: #fff;
    margin: 20px 0;
}

.date-picker-control label{
    color: #fff;
}

h1 {
    padding-left: 50px;
    padding-top: 5px;
    padding-bottom: 5px;
}

.content {
    padding-left: 10px;
    padding-right: 10px;
}

.ingredient-list {
    overflow-y: scroll;
    height: 80%;
    overflow: hidden;
}

.add-ingredient {
    border: 2px darkgray solid;
    color: darkgray;
    text-align: center;
    border-radius: 50%;
    font-size: 20px;
}

.add-ingredient:hover {
    border: 2px lightblue solid;
    color: lightblue;
}

.update-ingredient {
    border: none;
    background-color: white;
    color: darkgray;
    text-align: center;
    font-size: 15px;
}

.update-ingredient:hover {
    color: lightblue;
}

.filters .row {
   background-color: aliceblue;
}

.filters .col {
    border-left: 1px gray dashed;
    border-right: 1px gray dashed;
    border-top: 1px gray solid;
    border-bottom: 2px black solid;
}

.thumbnail {
    height: 100%;
    object-fit: contain;
    width: auto;
    padding: 0px;
    margin: 0px;
}

a {
    color: teal;
}

.entry {
    background-color: aliceblue;
}

.entry-body > p {
    padding: 0px;
    margin: 10px;
    line-height: 1.1;
}

.entry-body > h1 {
    padding: 0px;
    margin: 0px;
    line-height: 1.2;
}

.date-picker-control {
    font-size: 14px;
}

.left {
    float: left;
}

.right {
    float: right;
}

.login {
    padding-right: 50px;
    padding-top: 5px;
    padding-bottom: 5px;
}

#login-link{
    text-decoration: none;
    color: aliceblue;
}

